API Server: db connection, test queries, db design update
